--- a/MainApp.html
+++ b/MainApp.html
@@ -10,9 +10,8 @@
     </h2>
 
     <div>
-        <a href="http://workoutapp.epizy.com/AppLogin.php">Login</a><br><br>
-        <a href="showBoardUser.php">Login</a><br><br>
-        <!-- <a href="http://workoutapp.epizy.com/CreateAccount.php">Create Account</a> -->
+        <a href="https://jdeluca02.github.io/WorkoutApp/AppLogin.php">Login</a><br><br>
+        <a href="https://jdeluca02.github.io/WorkoutApp/showBoardUser.php">Create Account</a><br><br>
     </div>
 </body>
 
